--- a/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
+++ b/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
@@ -9,24 +9,14 @@
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/forgetpastext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="122dp"
-            android:text="please write your details to send you password and you can change at the edit profile"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        android:background="@color/ofwhite">
 
         <EditText
             android:id="@+id/Emailforgorpass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="288dp"
+            android:layout_marginTop="320dp"
             android:ems="10"
             android:hint="E-mail"
             android:inputType="textEmailAddress"
@@ -36,15 +26,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/imageemail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="68dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ImageView
+            android:id="@+id/emailimageforgotpass"
+            android:layout_width="265dp"
+            android:layout_height="223dp"
+            android:layout_marginTop="91dp"
+            android:src="@drawable/sendemail"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@tools:sample/avatars" />
+            app:layout_constraintTop_toBottomOf="@+id/Emailforgorpass" />
+
+        <ImageView
+            android:id="@+id/logo"
+            android:layout_width="254dp"
+            android:layout_height="211dp"
+            android:layout_marginBottom="62dp"
+            android:src="@drawable/project"
+            app:layout_constraintBottom_toTopOf="@+id/Emailforgorpass"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
