--- a/app/src/main/res/layout/fragment_signupfragmentcoustumer.xml
+++ b/app/src/main/res/layout/fragment_signupfragmentcoustumer.xml
@@ -8,61 +8,78 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/ofwhite">
 
         <Button
             android:id="@+id/btnsignup"
-            android:layout_width="224dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="80dp"
+            android:layout_width="232dp"
+            android:layout_height="62dp"
             android:layout_marginBottom="74dp"
-            android:text="Button"
+            android:backgroundTint="@color/dahabe"
+            android:text="signup"
+            android:textColor="#4E342E"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmpasswordsignuocoustumer" />
+            app:layout_constraintStart_toStartOf="parent"
+            tools:ignore="TouchTargetSizeCheck" />
 
         <EditText
             android:id="@+id/passwordsignuocoustumer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="69dp"
+            android:layout_marginTop="68dp"
             android:ems="10"
             android:hint="password"
             android:inputType="textPassword"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/confirmpasswordsignuocoustumer"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.536"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailsignuooustumer" />
-
-        <EditText
-            android:id="@+id/confirmpasswordsignuocoustumer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginBottom="193dp"
-            android:ems="10"
-            android:hint="confirm password"
-            android:inputType="numberPassword"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/btnsignup"
-            app:layout_constraintStart_toStartOf="@+id/passwordsignuocoustumer"
-            app:layout_constraintTop_toBottomOf="@+id/passwordsignuocoustumer" />
 
         <EditText
             android:id="@+id/emailsignuooustumer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="126dp"
-            android:layout_marginBottom="63dp"
+            android:layout_marginBottom="475dp"
             android:ems="10"
             android:hint="E-mail"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/passwordsignuocoustumer"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.536"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="270dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="39dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="286dp"
+            android:src="@drawable/project"
+            app:layout_constraintBottom_toTopOf="@+id/confirmpasscoustumer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/confirmpasscoustumer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="254dp"
+            android:ems="10"
+            android:hint="confirm password"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.536"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
