--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="ofwhite">#E8B3B3</color>
+    <color name="ofwhite">#dcd1bd</color>
+    <color name="dahabe">#bfa77a</color>
     <color name="pink">#D31C80</color>
     <color name="pink2">#f498ad</color>
     <color name="pink3">#fbcce7</color>
