--- a/app/src/main/res/layout/fragment_loginfragmentcoustumer.xml
+++ b/app/src/main/res/layout/fragment_loginfragmentcoustumer.xml
@@ -9,14 +9,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/pink4">
+        android:background="@color/ofwhite">
 
         <Button
             android:id="@+id/loginbt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="77dp"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="@color/dahabe"
             android:text="menu"
             app:layout_constraintBaseline_toBaselineOf="@+id/sigtupbt"
             app:layout_constraintStart_toStartOf="parent" />
@@ -27,45 +27,64 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="87dp"
             android:layout_marginBottom="101dp"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="@color/dahabe"
             android:text="SIGNUP"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <EditText
-            android:id="@+id/username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="89dp"
-            android:backgroundTint="@color/pink3"
-            android:ems="10"
-            android:hint="user name"
-            android:inputType="textPersonName"
-            android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/password"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <EditText
             android:id="@+id/password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="31dp"
             android:ems="10"
             android:hint="password"
             android:inputType="textPersonName"
             android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/forgot"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="234dp" />
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
         <TextView
             android:id="@+id/forgot"
-            android:layout_width="133dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="180dp"
+            android:layout_width="212dp"
+            android:layout_height="57dp"
+            android:layout_marginBottom="232dp"
             android:text="forgot password"
-            app:layout_constraintTop_toBottomOf="@+id/password"
-            tools:layout_editor_absoluteX="117dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/password" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="43dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="43dp"
+            android:layout_marginBottom="125dp"
+            android:src="@drawable/project"
+            app:layout_constraintBottom_toTopOf="@+id/password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/emailadresslogincoustumer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="29dp"
+            android:layout_marginBottom="51dp"
+            android:ems="10"
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/password"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
