--- a/app/src/main/res/layout/fragment_loginfragmentcoustumer.xml
+++ b/app/src/main/res/layout/fragment_loginfragmentcoustumer.xml
@@ -49,8 +49,8 @@
 
         <TextView
             android:id="@+id/forgot"
-            android:layout_width="212dp"
-            android:layout_height="57dp"
+            android:layout_width="253dp"
+            android:layout_height="56dp"
             android:layout_marginBottom="232dp"
             android:text="forgot password"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -73,7 +73,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/emailadresslogincoustumer"
+            android:id="@+id/emaillogincoustumer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="29dp"
