--- a/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
+++ b/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
@@ -27,7 +27,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/emailimageforgotpass"
+            android:id="@+id/btnimagerforgotpass"
             android:layout_width="265dp"
             android:layout_height="223dp"
             android:layout_marginTop="91dp"
