--- a/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
+++ b/app/src/main/res/layout/fragment_forgotpasswordfragment.xml
@@ -27,24 +27,29 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/btnimagerforgotpass"
-            android:layout_width="265dp"
-            android:layout_height="223dp"
-            android:layout_marginTop="91dp"
-            android:src="@drawable/sendemail"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Emailforgorpass" />
-
-        <ImageView
             android:id="@+id/logo"
             android:layout_width="254dp"
-            android:layout_height="211dp"
-            android:layout_marginBottom="62dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="47dp"
+            android:layout_marginBottom="226dp"
             android:src="@drawable/project"
-            app:layout_constraintBottom_toTopOf="@+id/Emailforgorpass"
+            app:layout_constraintBottom_toTopOf="@+id/imageButtonforgot"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/imageButtonforgot"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="61dp"
+            android:layout_marginEnd="61dp"
+            android:layout_marginBottom="60dp"
+            android:src="@drawable/sendemail"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
