--- a/app/src/main/res/layout/fragment_arabianbreakfastfragment.xml
+++ b/app/src/main/res/layout/fragment_arabianbreakfastfragment.xml
@@ -27,7 +27,7 @@
             android:id="@+id/scrollView3"
             android:layout_width="448dp"
             android:layout_height="0dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView9">
@@ -40,7 +40,7 @@
                 <ImageButton
                     android:id="@+id/shaksokabreakfastbtn"
                     android:layout_width="wrap_content"
-                    android:layout_height="341dp"
+                    android:layout_height="236dp"
                     tools:src="@drawable/shakshokabreakfast" />
 
                 <ImageButton
@@ -69,8 +69,8 @@
 
                 <ImageButton
                     android:id="@+id/foollbreakfastbutton"
-                    android:layout_width="405dp"
-                    android:layout_height="355dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="418dp"
                     tools:src="@drawable/foolbreakfast" />
 
                 <ImageButton
